<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="marqueeMessage">UQRota users please note that timetable may not be 100% accurate for week 1 | 
        Student Assistant - better than sitting on Si-net mashing F5 | Android version by Emile Victor</string>
    <string name="app_name">Student Assistant - UQ</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="room_textfield">Building number and room, e.g. 7-116</string>
    <string name="button_send">Find classes in this room</string>
    <string name="title_activity_find_room_contents">Timetable Results</string>
    <string name="stlucia_radioButton">St Lucia</string>
    <string name="ipswich_radioButton">Ipswich</string>
    <string name="gatton_radioButton">Gatton</string>
    <string name="headerImageContentDescription">UQ Student Assistant</string>

    <string-array name="campuses">
        <item>St. Lucia</item>
        <item>Ipswich</item>
        <item>Gatton</item>
        <item>Herston</item>
    </string-array>
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="roomAvailabilityAndClassesText">Room Availability and Classes:</string>
    <string name="computerAvailabilityHeadingText">Computer Availability:</string>
    <string name="transportText">Transport:</string>
    <string name="buildingRoomInstructionLabel">Building number and room, e.g. 78-116</string>
    <string name="buildingInputHint">building (e.g. 78)</string>
    <string name="roomInputHint">room (e.g. 116)</string>
    <string name="campusLabel">Choose your campus:</string>
    <string name="dayLabel">Choose which day to search for:</string>
    <string name="waiting_on_connection">Wait a second, I\'m not connected to the internet yet. Check your settings.</string>
    <string name="error_message_no_results">This room is either available all day, or like the room of requirement, is not present in UQ databases.</string>
    <string name="emileVictorCredits">App by Emile Victor</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- The main page -->
    <string name="witMainPageButtonText">Reverse Timetable Lookup</string>
    <string name="wheresMyClassBtnText">Where\'s My Class?</string>
    <string name="whatIsThisBtnText">What is this?</string>
    <string name="title_activity_what_is_this">What\'s this application for?</string>

    <!-- What is this page -->
    <string name="WITexplanationTitle">What is This application?</string>
    <string name="WITexplanation">The UQ Student Assistant is the brain in the pocket of well prepared UQ students.
        Need to find a spare computer, *anywhere*? We\'ve got you covered. Need to find a spare room to work in? That\'s here too - and it can also give you access
        to your class\'s timetable.\n\n
        
        The key point is that if you bought this application, you have not only the benefit of the features already implemented, you\'ll also get all updates made to the application
        in the future (just remember to let it auto-update via Google Play).\n\n
        
        UQ Student Assistant was coded by Emile Victor and makes use of UQ library, Rota and EAIT APIs - plus a little bit of code magic in between.</string>
    <string name="title_activity_wheres_my_class">Where\'s my Class?</string>

    <!-- Where's My Class? -->
    <string name="enterYourCourseCodeLabelTxt">Enter your course code:</string>
    <string name="button_findClass_text">Find My Class</string>
    <string name="title_activity_wheres_my_class_results">Results for your course</string>
    <string name="error_course_doesnt_exist">Error: the course either doesn\'t exist this semester or doesn\'t exist at all. Check your spelling.</string>

    <!-- Computer availability -->
    <string name="title_activity_computer_availability">Computer Availability (Live Floor Plans)</string>
    <string name="libraryChoiceText">Choose a library:</string>
    <string name="floorChoiceText">Choose a floor:</string>
    <string name="chooseLibraryBtnText">Get available computers</string>
    <string name="libraryLevelLabelText">Choose a floor level:</string>

    <string-array name="libraries">
        <item>Social Sciences &amp; Humanities</item>
        <item>Architecture &amp; Music</item>
        <item>Duhig</item>
        <item>Dorothy Hill Engineering and Sciences</item>
        <item>Law</item>
        <item>Graduate Economics &amp; Business Library</item>
        <!-- <item>Dorothy Hill Engineering &amp; Sciences </item> -->
        <item>Dentistry</item>
        <item>Biol Sciences</item>
        <item>Herston Health Sciences</item>
        <item>Fryer Postgraduate</item>
        <item>Gatton</item>
        <item>Mater</item>
        <item>PACE Health Sciences</item>
        <item>Princess Alexandra Hospital</item>
        <!-- <item>Fryer</item> -->
        <!-- <item>Gatton</item> -->
        <!-- <item>Graduate Economics &amp; Business </item> -->


        <!-- <item>Ipswich</item> -->
        <!-- <item>Mater McAuley</item> -->
        <!-- <item>PACE Health Sciences</item> -->
        <!-- <item>Princess Alexandra Hospital</item> -->
        <!-- <item>Rural Clinical School</item> -->
        <!-- <item>Walter Harrison Law Library</item> -->
    </string-array>
    <string-array name="levels">
        <item>Lvl1</item>
        <item>Lvl2</item>
        <item>Lvl3</item>
        <item>Lvl4</item>
        <item>Lvl5</item>
        <item>Lvl6</item>
        <item>Lvl7</item>
        <item>Lvl8</item>
    </string-array>

    <string name="title_activity_library_floor_plan">Computer Availability</string>
    <string name="title_activity_computer_availability_overview">EAIT Computer Availability</string>
    <string name="title_activity_computer_availability_overview_results">EAIT Computer Availability</string>
	<string name="UQ_library_data_overview">UQ Library overview</string>
    
    <!-- Bus information -->
    <string name="stLuciaBusesHeader">St Lucia Transport</string>
    <string name="title_activity_live_bus_info">Live Bus Information</string>
    <string name="title_activity_bus_menu">Bus Menu</string>
    <string name="chancellorsPlaceBusBtnText">Chancellor\'s Place Buses (Live)</string>
    <string name="UQLakesBusBtnText">UQ Lakes Buses (Live)</string>
    <string name="parkRdTrainsText">Park Road Trains (Live)</string>
    <string name="RCHHerstonBusText">RCH Herston Buses (Live)</string>
    <string name="GattonBusText">Gatton (Warrego Hwy) Buses (Live)</string>
    <string name="IpswichBusBtnText">UQ Ipswich Buses (Live)</string>
    <string name="IpswichTrainBtnText">Ipswich Trains (Live)</string>
    <string name="ToowongTrainBtnText">Toowong Trains (Live)</string>
    <string name="title_activity_library_availability_overview">UQ Library Overview</string>

    <!-- UQ Rota -->
    <string name="loginUQRotaText">Log into UQRota for timetable access</string>
    <string name="openRotaDayButtonText">UQRota (Today)</string>
    <string name="openRotaWeekButtonText">UQRota (Week)</string>
    <string name="uqRotaInstructionText">In order for UQ Student Assistant to display your rota timetables, you must log into UQRota.</string>
    <string name="prompt_username">UQRota.net Username</string>
    <string name="error_incorrect_password_or_username">Incorrect password or username.</string>
    <string name="title_activity_choose_rota_timetable">Choose timetable</string>
    <string name="UQRotaTimetableLoadingStatusInformation">Loading your timetables from UQRota...</string>

    <item name="uqRotaTimetableId" type="id"/>

    <string name="uqRotaTimetableSet">Set default timetable successfully.</string>
    <string name="title_activity_show_default_timetable">Your UQRota Timetable</string>
    <string name="UQRotaHeaderRow">Your UQRota Timetable</string>
    <string name="uqRotaPageNoClassesToday">There are no classes today.</string>
    <string name="logoutOfUQRota">Logout UQRota</string>
    <string name="rotaHeadingText">UQRota:</string>

    <!-- UQRota loading progress text -->
    <string name="uqRotaProgress1">Getting some information on your timetable from UQRota.</string>
    <string name="uqRotaProgress2">Getting some more information...</string>

    <!-- Error strings for UQRota -->
    <string name="InterruptedExceptionRotaFetch">There was a problem fetching your rota timetable. If you need support, email me: e@emilevictor.com.</string>
    <string name="title_activity_scrape_uqlibrary_info">Loading UQ Library Data</string>

</resources>