<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/bw_logo" />

    <TextView
        android:id="@+id/campusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/campusLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/campusChoiceSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/buildingRoomInstructionLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buildingRoomInstructionLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/horizontalRoomAndBuildingLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/building_textfield"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/buildingInputHint"
            android:inputType="text"
            android:paddingTop="17dp" />

        <EditText
            android:id="@+id/room_textfield"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/roomInputHint"
            android:inputType="text"
            android:paddingTop="17dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/dayLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="17dp"
        android:text="@string/dayLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/daysSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_send"
        style="@style/ButtonTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:onClick="findRoomButtonPressed"
        android:text="@+string/button_send" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/authorCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/emileVictorCredits"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>